[BUGFIX] Fixes #71: Sorting buttons wrap in project index due to missing col width

--- a/app/assets/stylesheets/partials/_components.scss
+++ b/app/assets/stylesheets/partials/_components.scss
@@ -483,6 +483,10 @@ p {
     vertical-align: top;
     padding: 2rem 1.2rem;
     border-left: 0.1rem solid transparentize($tealLight, 0.5);
+	&.sorting {
+	  width: 10rem;
+	  vertical-align: top !important;
+	}
     &.centered {
       vertical-align: middle;
       text-align: center;
